--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-mern-blog",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -40,4 +41,5 @@
       "last 1 safari version"
     ]
   }
+ 
 }
